--- a/contato.html
+++ b/contato.html
@@ -81,10 +81,10 @@
     <footer>
         <section class="rodape">
             <nav class="naveg">
-                <li>SOBRE</li>
-                <li>SUPORTE</li>
-                <li>LANÇAMENTOS</li>
-                <li>EVENTOS</li>
+                <a href="#" class="hover"><li>SOBRE</li></a>
+                <a href="#" class="hover"><li>SUPORTE</li></a>
+                <a href="#" class="hover"><li>LANÇAMENTOS</li></a>
+                <a href="#" class="hover"><li>EVENTOS</li></a>
             </nav>
             <aside>
                 <li>SIGA-NOS</li>
@@ -103,12 +103,12 @@
         </section>
         <section class="legais">
             <nav>
-                <li>Politica de Privacidade</li>
-                <li>Cookies</li>
-                <li>Aviso Legal</li>
-                <li>Termos de Uso</li>
-                <li>Acessibilidade</li>
-                <li>Configurações de Cookies</li>
+                <a href="#" class="hover"><li>Politica de Privacidade</li></a>
+                <a href="#" class="hover"><li>Cookies</li></a>
+                <a href="#" class="hover"><li>Aviso Legal</li></a>
+                <a href="#" class="hover"><li>Termos de Uso</li></a>
+                <a href="#" class="hover"><li>Acessibilidade</li></a>
+                <a href="#" class="hover"><li>Configurações de Cookies</li></a>
             </nav>
             <li class="legais2">Todos os direitos reservados @campaedesign</li>
         </section>
